material-dark/source.css
@import url("https://capnkitten.github.io/BetterDiscord/Themes/Material-Discord/css/fonts/google-sans.css"); 
/* I currently don't know how to fix the fonts not loading issue so for now it will be using the Discord version's font file */

:root {
    --font: "Google Sans", sans-serif !important;
    --messagebgcolor: rgb(33, 35, 38);
    --embedbgcolor: rgb(21, 23, 25);
    --popoutcolor: rgb(45, 48, 52);
    --serverbarselectedcolor: rgb(255, 255, 255);
    --actionbarbuttonhovercolor: rgba(255, 255, 255, 0.075);
    --actionbarbgcolor: rgb(45, 48, 52);
    --dividerlinecolor: rgba(255, 255, 255, 0.125);
    --contextmenubuttonhovercolor: rgb(61, 63, 67);
    --tippybgcolor: rgba(97, 97, 97, 0.9);
    --tippytextcolor: rgb(246, 246, 246);
    --pendingrequestbgcolor: rgb(39, 39, 42);
    --mediaradius: calc(18px / 1.75);
    --messageboxradius: calc(48px / 2);
    --cubicbezieranimation: cubic-bezier(0.4, 0, 0.2, 1);
}

.MessageBox__Base-sc-jul4fa-0 {
    border-radius: var(--messageboxradius) !important;
    position: relative;
    top: -10px;
    width: 98%;
    margin-left: 15px;
}

.FilePreview__Container-sc-znkm6h-0 {
    border-radius: var(--messageboxradius) var(--messageboxradius) 0 0;
    position: relative;
    top: -10px;
    width: 98%;
    margin-left: 15px;
}

.FilePreview__Container-sc-znkm6h-0:before, .FilePreview__Container-sc-znkm6h-0:after {
    content: " ";
    position: absolute;
    width: 0;
    height: 0;
    bottom: calc(18px / 0.95* -1);
    background-color: transparent;
    border: calc(18px / 1.8) solid transparent;
    border-top-color: var(--message-box);
    pointer-events: none;
}

.FilePreview__Container-sc-znkm6h-0:before {
    border-right-color: var(--message-box);
    right: -0.01px;
}

.FilePreview__Container-sc-znkm6h-0:after {
    border-left-color: var(--message-box);
    left: -0.3px;
}

.FilePreview__PreviewBox-sc-znkm6h-6, .FilePreview__EmptyEntry-sc-znkm6h-5 {
    border-radius: 18px;
}

.sc-dmlqKv {
    font-size: 110%;
} 

._sidebar_t7t23_39 {
    max-width: 240px;
}

._contentcontainer_t7t23_62 {
    min-width: 0px !important;
    max-width: 1600px !important;
    width: 80% !important;
    margin-left: 10%;
}

.Container-sc-1d91xkm-1 {
    box-shadow: hsl(0, 0%, 0%, 0.28) 0px 8px 24px;
}

._closeButton_t7t23_240 {
    border: none !important;
}

._content_1avxi_40 {
    font-weight: 500 !important;
}

._item_1avxi_1 {
    transition: background-color 250ms var(--cubicbezieranimation) !important;
}

.ServerSidebar__ServerList-sc-1lca5oe-1 {
    background: var(--primary-background);
    scrollbar-width: none;
}

.SidebarBase__GenericSidebarList-sc-1dma6vq-2 {
    background: var(--primary-background);
    scrollbar-width: none;
}

.SidebarBase__GenericSidebarBase-sc-1dma6vq-1 {
    background: var(--primary-background);
}

.MemberList__ListCategory-sc-1bwlier-0 {
    background: var(--primary-background);
}

.MessageBase-sc-1s9ehlg-0 {
    background-color: var(--messagebgcolor);
    border-radius: 18px;
    transition: background-color 250ms var(--cubicbezieranimation);
    margin-left: 78px;
    margin-right: 10px;
}

.MessageBase__MessageInfo-sc-1s9ehlg-1 {
    left: -75px;
    position: relative;
}

.MessageBase__MessageInfo-sc-1s9ehlg-1:not(:has(time)) {
    left: -50px;
    width: 40px;
    height: 40px;
}

.MessageBase__MessageInfo-sc-1s9ehlg-1 > div {
    width: 50px;
}

.MessageBase__MessageContent-sc-1s9ehlg-2 {
    left: -30px;
}

.MessageBase-sc-1s9ehlg-0:has(.MessageBase__MessageInfo-sc-1s9ehlg-1 time) .MessageBase__MessageContent-sc-1s9ehlg-2 {
    left: -66px;
    flex: 0 0 auto;
    width: calc(100% - 40px);
}

.SystemMessage__SystemContent-sc-1au0o14-0 {
    left: -55px;
    position: relative;
}

.MessageBase-sc-1s9ehlg-0:has(.MessageBase__MessageInfo-sc-1s9ehlg-1 time) {
    border-radius: 0 0 18px 18px;
}

.MessageBase-sc-1s9ehlg-0:has(.SystemMessage__SystemContent-sc-1au0o14-0) {
    border-radius: 18px !important;
}

.sc-iBPTik {
    box-shadow: hsl(0, 0%, 0%, 0.28) 0px 8px 24px;
    background: var(--actionbarbgcolor);
    border: none;
    border-radius: 16px;
    right: -26.75px;
    transition: width 250ms var(--cubicbezieranimation);
}

.MessageBase-sc-1s9ehlg-0:has(.MessageBase__MessageInfo-sc-1s9ehlg-1 time):not(:has(.SystemMessage__SystemContent-sc-1au0o14-0)):before, .MessageBase-sc-1s9ehlg-0:has(.MessageBase__MessageInfo-sc-1s9ehlg-1 time):not(:has(.SystemMessage__SystemContent-sc-1au0o14-0)):after {
    content: " ";
    position: relative;
    width: 0;
    height: 0;
    top: calc(18px / 1.1 * -1);
    background-color: transparent;
    border: calc(18px / 2.275) solid transparent;
    border-bottom-color: var(--messagebgcolor);
    pointer-events: none;
    transition: border-color 250ms var(--cubicbezieranimation);
}

.MessageBase-sc-1s9ehlg-0:has(.MessageBase__MessageInfo-sc-1s9ehlg-1 time):not(:has(.SystemMessage__SystemContent-sc-1au0o14-0)):before {
    left: -2px;
    border-left-color: var(--messagebgcolor);
}

.MessageBase-sc-1s9ehlg-0:has(.MessageBase__MessageInfo-sc-1s9ehlg-1 time):not(:has(.SystemMessage__SystemContent-sc-1au0o14-0)):after {
    right: 34px;
    border-right-color: var(--messagebgcolor);
}

.MessageEditor__EditorBase-sc-133d9pc-0 {
    position: relative;
    left: -37px;
}

.MessageReply__ReplyBase-sc-utzx7-0 {
    position: relative;
    left: 18px;
}

.EmbedInvite__EmbedInviteBase-sc-154n8c6-0 {
    background-color: var(--embedbgcolor);
    border-radius: var(--mediaradius);
}

._attachment_197qa_1 {
    background: var(--embedbgcolor) !important;
    border-radius: var(--mediaradius);
}

._actions_iu4oa_1 {
    background: transparent;
}

.ReplyBar__Base-sc-d2l7w7-0 {
    position: relative;
    top: -10px;
    background: transparent;
}

.TypingIndicator__Base-sc-1jama4m-0 {
    top: -10px;
    width: 97.5%;
}

.TypingIndicator__Base-sc-1jama4m-0 > div {
    background-color: var(--primary-background);
    backdrop-filter: blur(0px) !important;
    z-index: 1;
}

.MessageArea__Area-sc-1q4cka6-0 {
    width: 98%;
    margin-bottom: 15px;
}

.JumpToBottom__Bar-sc-v9kqir-0.gILwrq {
    display: flex;
    top: 5px;
    border-radius: 0 0 0 0;
    z-index: 2;
    justify-content: center; 
    align-items: center;
}

.JumpToBottom__Bar-sc-v9kqir-0.gILwrq > div {
    border-radius: 50px;
    height: 52px;
    width: 40%;
    width: max-content;
}

.JumpToBottom__Bar-sc-v9kqir-0.ggHcXn {
    display: flex;
    top: -75px;
    border-radius: 0 0 0 0;
    z-index: 2;
    justify-content: right;
    align-items: right;
}

.JumpToBottom__Bar-sc-v9kqir-0.ggHcXn > div {
    border-radius: 15px;
    min-width: 80px !important;
    width: max-content;
    height: 56px;
    margin-right: 20px;
    background-color: var(--accent);
    color: rgb(255, 255, 255);
}

.JumpToBottom__Bar-sc-v9kqir-0.ggHcXn .right {
    flex-direction: row-reverse;
}

.JumpToBottom__Bar-sc-v9kqir-0.gILwrq .right > span, .JumpToBottom__Bar-sc-v9kqir-0.ggHcXn > div > div:not(.right) {
    display: none;
}

.JumpToBottom__Bar-sc-v9kqir-0 .StyledIconBase-ea9ulj-0 {
    width: 36px;
    height: 36px;
}

.ButtonItem-sc-1ixnesa-0, ._item_1avxi_1 {
    border-radius: 21px;
}

.Button-sc-wdolxy-0 {
    border-radius: 18px;
    background-color: var(--accent);
    height: 36px;
}

.Button-sc-wdolxy-0.jMjzeh {
    background-color: transparent;
}

.Actions-sc-1d91xkm-4 {
    background: var(--secondary-header)
}

.sc-fubCzh {
    border-radius: 50px;
}

.sc-fubCzh:hover {
    background-color: var(--actionbarbuttonhovercolor);
}

._item_1avxi_1[data-active=true] {
    background-color: color-mix(in srgb, var(--accent) 35%, transparent);
}

.context-menu {
    background-color: var(--popoutcolor) !important;
    border-radius: 8px;
    box-shadow: 0 4px 8px 0 rgb(0, 0, 0) ;
    animation: opacity-anim 100ms ease, context-menu-anim 300ms var(--cubicbezieranimation);
    transform-origin: top;
    backdrop-filter: none !important;
}

.context-menu > span {
    transition: background-color 250ms var(--cubicbezieranimation);
    min-height: 32px;
    padding: 9px 12px !important;
    margin: 0 !important;
}

.context-menu > span:not([data-disabled=true]):hover, .context-menu .main > span:not([data-disabled=true]):hover {
    background-color: var(--contextmenubuttonhovercolor) !important;
}

.LineDivider-sc-135498f-0 {
    width: 100%;
    background-color: var(--dividerlinecolor);
    margin: 8px 0;
}

._friend_sd6wo_33 {
    transition: background-color .2s ease;
    border-radius: 18px;
}

._friend_sd6wo_33:hover {
    background-color: var(--hover);
}

._button_sd6wo_44 {
    background-color: transparent;
}

.SwooshWrapper-sc-176t3v5-1 {
    transform: rotate(180deg);
    left: -33px;
    top: -37px;
}

.SwooshWrapper-sc-176t3v5-1 > svg {
    width: 30px;
}

.SwooshWrapper-sc-176t3v5-1 > svg > path {
    fill: var(--serverbarselectedcolor);
}

.Base-sc-j9ukbi-0 {
    border-radius: 16px;
}

.tippy-box {
    border-radius: 8px;
    background-color: var(--tippybgcolor);
    color: var(--tippytextcolor);
}

.tippy-arrow {
    display: none;
}

._header_kup3j_8 {
    border-radius: 18px 18px 0 0;
}

._content_kup3j_90 {
    border-radius: 0 0 18px 18px;
}

._pending_sd6wo_95 {
    border-radius: 18px;
    background: var(--pendingrequestbgcolor);
}

._entry_kup3j_140 {
    transition: background-color 250ms var(--cubicbezieranimation);
}

@keyframes opacity-anim {
    from {
        opacity: 0;
    }
}

@keyframes context-menu-anim {
    from {
        transform: scale(1, 0.5);
    }
}

